miniextendr-macros/tests/ui/trait_receiver_by_value.stderr
error: #[miniextendr] trait method `BadSelfByValue::foo` receiver must be `&self` or `&mut self`, not `self` by value
 --> tests/ui/trait_receiver_by_value.rs:7:5
  |
7 |     fn foo(self);
  |     ^^^^^^^^^^^^
